# discrete_analysis

./: CMakeLists.txt  README.md  report_template.docx
s1/lab1/: lab1 (maybe).cpp  lab1.cpp  report_lab1.docx
s1/lab2/: lab2.cpp  lab2WHY.cpp  report_lab2.docx
s1/lab3/: report_lab3.docx
s1/lab4/: lab4.cpp  report_lab4.docx
s2/cp/: input.txt  nearest_neighbor.cpp
s2/lab5/: input.txt  lab5.cpp  report_lab5.docx  thisagain.cpp
s2/lab7/: huh.cpp  input.txt  lab7.cpp  report_lab7.docx
s2/lab8/: input.txt  lab8.cpp  report_lab8.docx
s2/lab9/: input.txt  lab9.cpp  report_lab9.docx
